Localisation I hate Localisation

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1076,6 +1076,14 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.152.a:0 "We are in a dire need of few new pounds."
   germany.152.b:0 "The British Empire will not decline in size!"
 
+  germany.153.t:0 "Britian accepts the Sale of Ashanti"
+  germany.153.d:0 "The British Government has accepted the sale of their colony Ashanti. The transfer is immediate and so will be our payment to them.\nFinally we have unified our Gold Coast Territories and can increase the development in the region. A great rise in Prestige for our Empire!"
+  germany.153.a:0 "German West Africa is finally United!"
+
+  germany.154.t:0 "Britian declines the Sale of Ashanti"
+  germany.154.d:0 "The British have rejected our proposal to buy Ashanti. It seems like in British Politics there is no room to reduce their Empire. The delusions of invincible grandeur have rarely ever become reality."
+  germany.154.a:0 "Truly a great disappointment."
+
 
   germany.155.t:0 "The Issues of the Colonies"
   germany.155.d:0 "The New Kaiserliche Conference focusing on discussing the status of the Empire revealed a great deal of information to the politicians and lawmakers in Berlin, mostly negative.\n\nThe State of the Modernization and Development Empire's Colonies is marginal at best.Despite great promises in the last years, the planned education reforms and building of schools in Africa only saw minimal progress at best. The rampant illiteracy inside the colonies has improved very little.\nFurthermore the treatment of the African Workers is still subhuman. Standardized Working Conditions have not been implemented and in several places Africans are forced to work for entire days with no rest bordering Slavery. This practice does not even really benefit the Empire economicially it hinders the progression of its potential working class and only helps to increase the pockets of African Landlords.\nLastly the greatest issue plagueing all colonies has been a severe need of bureaucracy. Administral region are in several regions not clearly defined, neither their rules, functions, powers or whatever. Everywhere lawmakers are missing to handle corruption and oversee the progression of development. While reading through the reports, one gets the impression that we sometimes do not even know what kind of lands we actually control!\n\nHowever while the discorveries of the Conference were gut-wrenching to resolve to fix these issues have never been higher. Germany needs to compete with all Great Powers in the world and for that we need a stable realm. Yes the costs of improving all these issues are high but those are the burderns we have to bear for our Empire."
@@ -1083,15 +1091,15 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
 
   germany.180.t:0 "German Africa - A Continent of Opportunities"
-  germany.180.d:0 ""
-  germany.180.a:0 "We have to stand together against the oncoming storm."
+  germany.180.d:0 "Our African Colonies are the pride our Empire. Resource-Rich, millions of new potential laborers, unlimited farmland, unexplored lands to explore and so much more. But let us look away from the vacation posters and slogans and learn about the real situation in Africa\n\nGerman Central Africa is our biggest colony in size but size does not really equal value. Despite owning them now for several decades the development inside the colony is remarkebly slow especially in the hinterlands. We took great pride in gaining a corridor from West to East but there are no real transportation ways to get from Libravilla to Dar es Salaam on ground.\nInstead of facing this challenge, we supported the United Kingdom with Geoforming Project in Africa allowing Lake Chad to its ancient times and create new future farm land. A new capital is needed in the most promising region of Afrika.\n\nIn our Southern Colony great discoveries have been made. Large amounts of rare materials, like Nickel, Tin and Chromium have been found and a lot more could be excavated with modern equipment and infrastructure. However the administration in Südwestafrika has a rather brutal administration regarding its native population and for further increased mining we must stabilize the colony.\n\nThere are so many more problems. Settlers, the Civilization of the Africans, the State of the Armed Forces, the borders and so much more. But the colony has potential, a potential we can not overlook."
+  germany.180.a:0 "I love the Jungles."
 
   germany.181.t:0 "German Pacific - Preparing against the Coming Storm"
-  germany.181.d:0 ""
+  germany.181.d:0 "The Pacific Colonies are in a far less profitable situation then our African ones. We controll the majority of the islands of the Pacific and hold the Northern Flank against any Jacobin Expansion from Japan. In the Pacific the question is not if we can develop those colonies rather how much are we willing to reinforce them?\n\nAfer the First World War we gained the Philipines from the Spanish the increase our realms in the Pacific Theater. At first we thought that the colony with strong Europaen Cutlural Ties would be easy to control however it seems like their are quite resistant to our presence and even a small rebellion has broken out in December of 1932. The future of the Philipines will be decided by the acions of Dönitz and the Government in Frankfurt if it choses so.\n\nThe most imprortant factor in this theater of the world is always Japan. Since their Jacobin Revolution people fear that Japan could escalate their demands of liberation in the Pacfific. Due to this Dönitz demands greater reinforcements to the Eastern Forces. He requires naval bases, fortifications, dockyards, ships, fuel and so much more to defend against the glooming Japanese Threat as he calles it.\n\nSeveral gentlemen here wonder if the claims of Dönitz are really to be taken serious and are not just hysteria. It seems like that even if Japan would do the most unthinkable that would never get past the British Islands and their navy and so it is seen as a necassity to reinforce the Far East.\n\nHowever there still might be problems in the Former French Colony in Australia. The Republic of Australie appears to be be quite bitter about their defeat and losses in WW1 and some say that they still regard themself as part of the French Realm. If this would be true we would have a huge security risk next to our new naval bases in Australia."
   germany.181.a:0 "We have to stand together against the oncoming storm."
 
-  germany.182.t:0 ""
-  germany.182.d:0 ""
+  germany.182.t:0 "The Focus of our Colonial Involvement?"
+  germany.182.d:0 "What is our focus on Colonial Matters in the next years? Groener promises great profits and a bright future in his African Colonies but Dönitz warns about the threats in the Far East which could risk our influence in East Asia. The choice lies with us here in Frankfurt. Should our greatest colonial investments be directed towars the African Continent or should we divert them to the Pacific?"
   germany.182.a:0 "Africa is our future."
   germany.182.b:0 "Reinforce the Pacific."
 
