Tomorrow will be a big day

--- a/localisation/english/PB_peace_popup_l_english.yml
+++ b/localisation/english/PB_peace_popup_l_english.yml
@@ -52,6 +52,7 @@
  PB_PEACE_POPUP_FLAVOR_NTR:0 "Inspired by hate, their maddness collapsed"
  PB_PEACE_POPUP_FLAVOR_Malaya_Loss:0 "Negaraku, Tanah tumpahnya darahku"
  PB_PEACE_POPUP_FLAVOR_Malaya_Victory:0 "Negaraku Sehati Sejiwa"
+ PB_PEACE_POPUP_FLAVOR_UAR:0 "Without pain, we wouldn't know joy."
 
  PB_PEACE_POPUP_FLAVOR_Slovakia_Loss:0 "The weak are the first casualties of a revolution"
  PB_PEACE_POPUP_FLAVOR_Slovakia_Win:0 "The Dream of Greater Hungary dies a bloody death"
