--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -244,7 +244,7 @@
   PB_GER_The_Italian_Dispute:0 "The Italian Dispute"
   PB_GER_Victory_Rebuilding_Germany:0 "Rebuilding Germany"
   PB_GER_Reaffirm_Ties_With_Britain:0 "Reaffirm Ties with Britain"
-  PB_GER_Rebuild_The_Rhine:0 "The Rhenish Issue"
+  PB_GER_Rebuild_The_Rhine:0 "Deal With The French Colonizers"
   PB_GER_Hunt_Down_The_Collaborators:0 "Hunt Down the Collaborators"
   PB_GER_Status_Of_The_Empire:0 "Status of the Empire"
   PB_GER_European_Common_Market:0 "Establish a Common German Market"
@@ -1103,6 +1103,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.182.a:0 "Africa is our future."
   germany.182.b:0 "Reinforce the Pacific."
 
+  germany.183.t:0 "The Lyon Trials"
+  germany.183.d:0 "The conference on the status of French and Russian war criminials of the Second Great War, simply known as the Lyon Trials, were held 10:00 a.m. within the French city of Lyon. The city miraculously avoided any major urban firefights or long drawn out sieges thanks to the mayors willingness to surrender the French garrison in the city without much of a fight. The location was decided upon after the both the German and British government had jointly decided that Paris was simply not suitable to host any form of official conference, let alone one that would decide the fate of the many war criminals that had come about during the war. Parisian infrastructure was virtually none existent and both parties quickly decided that the largely intact Lyon would suit the conference best, with the court hearings and procceedings being held within the once defunct parliament house.\n\nThe first matter of the Trials was the topic of the SP and their role in the war. Many disturbing atrocities, especially towards jews, had taken place under SP leadership and whilst the investigation into some of the worst of these atrocities are sill on going the verdict had been made clear by the court; death by hanging for those responsible for crimes against humanity. The next topic of discussion was that of the French and Russian military, numerous violations of the rules of war were broken on many occasions by important individuals originating from the armed forces of these nations and it can be argued that such individuals were responsible for France's warmongering attitude. The court decided on a case by case basis and many high ranking military officials had either received the death penalty or life imprisonment. The final discussion point of the day was that of the individuals who held government jobs and the country leaders themselves. Both economists under the French and Russian government utilised slavery in different forms to full their war machines. They were also complacent in the mistreatement of prisoners of war as well as occupied populations and arguably encouraged it. These government officials mostly got away from having the death penalty besides some extreme cases. Finally was the topic of the leaders of France and Russia. This was the most long and drawn out area of the Lyon Trials and lawyers on either side passionately argued that both parties were responsible for the enviroment that lead these nations to the path of war, they also pointed out the hypocrisy in the British and German empires who had achieved their world status by conquering other nations much in the same vein as the French and Russian governments. However the court did not budge and came to the conclusion that both leaders were to be hanged and their bodies cremated in undisclosed locations. By the end of the week the trials had concluded and most of the individuals responsible for the horrors of the Second Great War were either dead or locked up indefinitely. Europe must now rebuild itself, piece by piece, and undo the mistakes of the past else it face the monster of vengeance once again."
+  germany.183.a:0 "Death is justice"
+
   ##########################
   # GERMANY EXILE EVENTS
   ##########################
@@ -1134,8 +1138,6 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany_exile.7.t:0 "The Dutch fold"
   germany_exile.7.d:0 "The Dutch government has reluctantly accepted our demands of submission. They have made their position clear however that this occupation must be temporary and if it isn't then armed conflict would arise. Regardless, the government is ecstatic. The acquisition of Dutch territory shall surely be a great boon to our efforts against those that occupy the Fatherland."
   germany_exile.7.a:0 "As they should"
-
-
 
   ##########################
   # DECISIONS
@@ -1474,6 +1476,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_PEF_LIBERATION_FRONT:0 "European Liberation Front"
 
   GER_FORMS_EUROPA:0 "The following nations will be annexed if they exist:\n\n-[DEN.GetFlag] Denmark\n-[SWE.GetFlag] Sweden\n-[NOR.GetFlag] Norway\n-[POL.GetFlag] Poland\n-[WLA.GetFlag] Wallonia\n-[HOL.GetFlag] Netherlands\n\nOverseas territories will be reformed into European mandates and the proclamation of Europa will happen"
+
+  GER_DEPORT_THE_FRENCHIES:0 "Any cores the [FRA.GetFlag] French may have in the Lowlands or the Rhineland will be removed"
 
   ##########################
   # COSMETIC TAGS
