--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -664,6 +664,14 @@
   PBNews.169.d:0 "Following the American proclamation as the heirs of the British Empire many Anglo officials took an openly aggresive stance towards such a notion, stating that the empire, although weakened and divided still lived on in the mainly isolated British colonies of the Green Sahara. American politicians were apperently dumb founded that the king, who had reported to be on his way to the United Commonwealth, instead redirected his voyage to the dominions in Africa. His majesty then proceeded to proclaim a British government in exile much like the Germans once had done. The king was apparently hit by artilley shrapnel during his evacuation but is still alive and stable."
   PBNews.169.a:0 "Nothing lasts forever"
 
+  PBNews.170.t:0 "THE FRENCH PLIGHT"
+  PBNews.170.d:0 "The German government today had stated that it had now begun the long and arduous task of relocating the French diaspora primarily away from the Lowlands and Rhineland and back into France proper. Reports have circulated that the German government is poorly handling the situation and accounts of extreme starvation and dehydration are becoming too numerous to ignore. However these complaints have fallen on deaf ears, neither the German and British governments are too fond of treating essentially colonizers with any amount of respect or consideration. Especially Germany who bore the brunt of French brutality during the Second Great War."
+  PBNews.170.a:0 "History is written by the victors"
+
+  PBNews.171.t:0 "THE LYON TRIALS"
+  PBNews.171.d:0 "The trials of the many war criminals in the Pacte Revanchist was held in the French city of Lyon today. Verdicts were handed out according to the responsibility and possible intervention one had in the Second Great War. Of the crowd of war criminals were military personal, government officials, and the country leaders themselves. The court often decided upon handing out the death penalty or life sentences, with only a handful of individuals escaping the conference as free men. The leaders of France and Russia were a major focus point and the verdict on these individuals was death by hanging, followed by the cremation of their bodies in an undisclosed location."
+  PBNews.171.a:0 "We can finally rest under a peaceful sun"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
