--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -57,6 +57,9 @@
  VICTORY_POINTS_6573:0 "Kassa"
  VICTORY_POINTS_9692:0 "Pozsony"
  VICTORY_POINTS_9660:0 "Budapest"
+ VICTORY_POINTS_9665:0 "Linz"
+ VICTORY_POINTS_3673:0 "Klagenfurt"
+ VICTORY_POINTS_9613:0 "Udine"
  VICTORY_POINTS_11610:0 "Pecs"
  VICTORY_POINTS_11659:0 "Debrecen"
  VICTORY_POINTS_391:0 "Amsterdam"
@@ -76,6 +79,8 @@
  VICTORY_POINTS_575:0 "Dunkerque"
  VICTORY_POINTS_620:0 "Limoges"
  VICTORY_POINTS_678:0 "Mulhouse"
+ VICTORY_POINTS_6712:0 "Freiburg"
+ VICTORY_POINTS_3547:0 "Bonn"
  VICTORY_POINTS_512:0 "Orleans"
  VICTORY_POINTS_3552:0 "Brest"
  VICTORY_POINTS_3594:0 "Vichy"
