--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -229,6 +229,8 @@
 
   PB_GER_Demilitarization:0 "Demilitarization"
   PB_GER_Rebuilding_Germany:0 "Rebuilding Germany"
+  PB_GER_Colonial_Assistance_Funds:0 "Colonial Assistance Funds"
+  PB_GER_Franco_German_Foreign_Legion:0 "Franco-German Foreign Legion"
 
   ##########################
   # FOCUSES
@@ -1190,6 +1192,11 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.183.d:0 "The conference on the status of French and Russian war criminials of the Second Great War, simply known as the Lyon Trials, were held 10:00 a.m. within the French city of Lyon. The city miraculously avoided any major urban firefights or long drawn out sieges thanks to the mayors willingness to surrender the French garrison in the city without much of a fight. The location was decided upon after the both the German and British government had jointly decided that Paris was simply not suitable to host any form of official conference, let alone one that would decide the fate of the many war criminals that had come about during the war. Parisian infrastructure was virtually none existent and both parties quickly decided that the largely intact Lyon would suit the conference best, with the court hearings and procceedings being held within the once defunct parliament house.\n\nThe first matter of the Trials was the topic of the SP and their role in the war. Many disturbing atrocities, especially towards jews, had taken place under SP leadership and whilst the investigation into some of the worst of these atrocities are sill on going the verdict had been made clear by the court; death by hanging for those responsible for crimes against humanity. The next topic of discussion was that of the French and Russian military, numerous violations of the rules of war were broken on many occasions by important individuals originating from the armed forces of these nations and it can be argued that such individuals were responsible for France's warmongering attitude. The court decided on a case by case basis and many high ranking military officials had either received the death penalty or life imprisonment. The final discussion point of the day was that of the individuals who held government jobs and the country leaders themselves. Both economists under the French and Russian government utilised slavery in different forms to full their war machines. They were also complacent in the mistreatement of prisoners of war as well as occupied populations and arguably encouraged it. These government officials mostly got away from having the death penalty besides some extreme cases. Finally was the topic of the leaders of France and Russia. This was the most long and drawn out area of the Lyon Trials and lawyers on either side passionately argued that both parties were responsible for the enviroment that lead these nations to the path of war, they also pointed out the hypocrisy in the British and German empires who had achieved their world status by conquering other nations much in the same vein as the French and Russian governments. However the court did not budge and came to the conclusion that both leaders were to be hanged and their bodies cremated in undisclosed locations. By the end of the week the trials had concluded and most of the individuals responsible for the horrors of the Second Great War were either dead or locked up indefinitely. Europe must now rebuild itself, piece by piece, and undo the mistakes of the past else it face the monster of vengeance once again."
   germany.183.a:0 "Death is justice"
 
+  germany.184.t:0 "The Italian Dispute"
+  germany.184.d:0 "The Italian Kingdom has always claimed the regions of Tyrol, Istria, and Friaul ever since their unification. Whilst we are on friendly terms with the Italian government the topic of who should govern these regions have remained a persistent thorn in our diplomatic relations. The time has now come to decide whether these lands should stay under our control of be ceded to the Italians."
+  germany.184.a:0 "Such is the cost of friendship"
+  germany.184.b:0 "These are German lands!"
+
   ##########################
   # GERMANY EXILE EVENTS
   ##########################
@@ -1728,3 +1735,4 @@ HamburgLeag_research_desc:0 "The Vienna Research Collaboration was founded in NÃ
 
  #country flags
  GER_IN_EXILE:0 "Germany is in exile"
+ GER_Victory_In_Europe:0 "Victory in Europe"
