--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -353,7 +353,7 @@
   PBNews.91.a:0 "A fascinating tale for the modern age of exploration!"
 
   PBNews.92.t:0 "PAX AMERICANA SETS RECORDS"
-  PBNews.92.d:0 "Newstands bustle today as a tale rivets the people of America. Written by an American named Elion Mimiovich, Pax Americana is set in timeline where America declares its independence from The United Kingdom. The loss of America leads to the creation of a Jacobin British state. America then forms an alliance with France and Spain called The Atlantic Coalition. Meanwhile, the British Republic grows closer to Russia and Germany, which fall to similar Jacobin governments and form an alliance called The Northern League. The book culminates in the beginning of The Great War. Critics note absurd plot elements like that Tesla and Edison's genius never occur and America never abandons Britain."
+  PBNews.92.d:0 "A new tale rivets the people of America. Written by an American named Elion Mimiovich, Pax Americana is set in timeline where America declares its independence from The United Kingdom. The loss of America leads to the creation of a Jacobin Britain. America then forms an alliance with France and Spain called The Atlantic Coalition. Meanwhile, the British Republic grows closer to Russia and Germany, which fall to similar Jacobin governments and form their own alliance. The book culminates in the beginning of The Great War. Critics note absurd plot elements like that Tesla and Edison's genius never occur and America never abandons Britain."
   PBNews.92.a:0 "Since When Did Alternative History Become Profitable?"
 
   PBNews.93.t:0 "KÖLNER BC 01 VICTORY"
@@ -453,11 +453,11 @@
   PBNews.116.a:0 "Isn't the war supposed to be over?"
 
   PBNews.117.t:0 "MEXICO INVADES RIO GRANDE"
-  PBNews.117.d:0 ""
+  PBNews.117.d:0 "A Rio Grande Convoy moves through the Sierra Madre mountain chain, ambushed by Mexican troops, the diplomats who were with the convoy where held hostage if the state of Rio Grande did not surrender itself to the Mexican Army. Rio Grande refused, thus Mexico declared war./n/ The start of the River War"
   PBNews.117.a:0 "The Empire Expands"
 
   PBNews.118.t:0 "MEXICAN COALITION FORMS"
-  PBNews.118.d:0 ""
+  PBNews.118.d:0 "Disgust filled many people's heads when they heard about the Mexican invasion, but especially those of the leaders of Tejas, California and Santa Fe. So displeased by the Mexican behaviour, they formed a coalition and declared war on Mexico to take down the threat. The River war expands northwards and westwards. Victory however is not secure for either side. Rumours are already spreading that people are betting on winners."
   PBNews.118.a:0 "They Are Getting Desperate"
 
   PBNews.119.t:0 "MEXICAN BEATS COALITION"
@@ -565,7 +565,7 @@
   PBNews.144.a:0 "Her contributions will not be forgotten"
 
   PBNews.145.t:0 "INTERNATIONAL TELESCREENING"
-  PBNews.145.d:0 "In a culmination of more than three years of development, the International Screen Research Commission in Bern conducted the first trans-national telescreen broadcast without the need for relay networks in history. Watchers across Europe tuned in to watch a previously recorded film of the 1928 Olympic Games in Calais. Watchers with a radiographic device could even tune into an associated frequency to enjoy simulcast sound.\n\nWhile rudimentary, the broadcast demonstrates the theoretical possibility of an international telescreen broadcast without the need for bulky relay networks, although researchers stressed that the technology needs more time."
+  PBNews.145.d:0 "In a culmination of more than three years of development, the International Screen Research Commission in Bern conducted the first trans-national telescreen broadcast without the need for relay networks in history. Watchers across Europe tuned in to watch a previously recorded film of the 1928 Olympic Games in Calais. Watchers with a radiographic device could even tune into an associated frequency to enjoy simulcast sound.\n\While rudimentary, the broadcast demonstrates the theoretical possibility of an international telescreen broadcast without the need for bulky relay networks, although researchers stressed that the technology needs more time."
   PBNews.145.a:0 "Watching the footie just got easier"
 
   PBNews.146.t:0 "SPINOSAUR DEBUT IN ALGIERS"
@@ -573,7 +573,7 @@
   PBNews.146.a:0 "Life uh.... finds a way"
 
   PBNews.147.t:0 "WORLD'S FAIR IN BUENOS AIRES"
-  PBNews.147.d:0 "Gather around people of the world, the wonders of the world are shown here in Buenos Aires. All the sciences and brains are coming together here in peace, to share their knowledge with the world.From America to the outer islands of New Zealand, and from the gates of Beijing to London.\n\Although Britain has been doing rather well, technology wise, these last few decades.This year however, Britain's position is being challenged, everywhere around the globe new tech and ideas have evolved.\n\The Brits have welcomed this competition with open arms, as they feel it is important the world develops together.\n\The past of the World Fairs has been full of evolution, eurekas and oddities.\n\Let's wonder and see what comes out of it this year. "
+  PBNews.147.d:0 "Gather around people of the world, the wonders of the world are shown here in Buenos Aires. All the sciences and brains are coming together here in peace, to share their knowledge with the world.From America to the outer islands of New Zealand, and from the gates of Beijing to London.Although Britain has been doing rather well, technology wise, these last few decades.This year however, Britain's position is being challenged, everywhere around the globe new tech and ideas have evolved. The Brits have welcomed this competition with open arms, as they feel it is important the world develops together. The past of the World Fairs has been full of evolution, eurekas and oddities."
   PBNews.147.a:0 "How fascinating"
 
   PBNews.148.t:0 "ALEXEI TRIUMPHANT" #old
