Germany Important Stuff

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -836,7 +836,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.30.c:0 "Have them arrested"
 
   germany.31.t:0 "Coal Workers in Zwickau demand better Working Conditions"
-  germany.31.d:0 "The Coal Mines in Zwickau have gone quiet these days.\n"
+  germany.31.d:0 "The Coal Mines in Zwickau have gone quiet these days. The Coal Workers demand better conditions regarding their safety.\n\nThe Coal Works in Zwickau and the surrounding areas are some of the largest in Germany and the Saxon Kingdom heavily depend on their production. But right now, no coal is being mined there.\nDue to extensive expansion and growing desire to extract more and more coal to suit the demands of our growing industry it seems like all safety standards in this endeavour have been forgotten.\nNew automatic equipment creates gases which damages the lungs of anyones who breathes them in, the massive coal diggers are not operated by well enough trained equipment causing several cases of human accidents, basic commodities are missing for several workers and so much more.\n\nThose workers now are striking and demanding better conditions, however this will be quite costly and the extraction of more coal is needed immediately."
   germany.31.a:0 "Have their demands fullfilled."
   germany.31.b:0 "Well... a few railings might satisfy them."
   germany.31.c:0 "Arrest them and get some new workers!"
