A bunch of fixes and adjustments

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1732,16 +1732,16 @@
  MEX_ds_DEF:0 "The Empire of Mexico"
  MEX_rc:0 "Empire of Mexico"
  MEX_rc_DEF:0 "The Empire of Mexico"
- MEX_an:0 "Empire of Mexico"
- MEX_an_DEF:0 "The Empire of Mexico"
- MEX_cn:0 "Empire of Mexico"
- MEX_cn_DEF:0 "The Empire of Mexico"
- MEX_lb:0 "Empire of Mexico"
- MEX_lb_DEF:0 "The Empire of Mexico"
- MEX_ss:0 "Empire of Mexico"
- MEX_ss_DEF:0 "The Empire of Mexico"
- MEX_jc:0 "Empire of Mexico"
- MEX_jc_DEF:0 "The Empire of Mexico"
+ MEX_an:0 "Mexican Republic"
+ MEX_an_DEF:0 "The Mexican Republic"
+ MEX_cn:0 "Mexican Republic"
+ MEX_cn_DEF:0 "The Mexican Republic"
+ MEX_lb:0 "Mexican Republic"
+ MEX_lb_DEF:0 "The Mexican Republic"
+ MEX_ss:0 "Mexican Republic"
+ MEX_ss_DEF:0 "The Mexican Republic"
+ MEX_jc:0 "Mexican Republic"
+ MEX_jc_DEF:0 "The Mexican Republic"
  MEX_ni_ADJ:0 "Mexican"
  MEX_rc_ADJ:0 "Mexican"
  MEX_lb_ADJ:0 "Mexican"
