--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -349,6 +349,9 @@
  mountaineers_desc:0 "Combat in mountain ranges exposes troops to many perils, but sometimes cannot be avoided. Providing our soldiers with specialized training for this environment, we can minimize these risks."
  penal_battalion:0 "Penal Battalion"
  penal_battalion_desc:0 "The ultimate meat for the meat grinder."
+ combat_amalgamate:0 "Combat Amalgamate"
+ combat_amalgamate_desc:0 "Questionably ethical cavalry replacement"
+
  recon:1 "Cavalry Recon Detachment"
  recon_desc:0 "Sending smaller groups to scout ahead before moving in the main force allows us to gather intelligence about where the enemy is and how many we are facing."
  mot_recon:0 "Motorized Recon Company"
