--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -226,6 +226,24 @@
 
  combatagate_1:0 "Combatagate Primordial Forms"
  combatagate_1_desc:0 "Created in the 1920s due to failed cattle yield experiments, Combatagates function as biological shock cavalry. The creatures are released on the enemy in a highly agitated state, and after between twelve to fourteen hours will die from organ failure via an imprinted biological timer, requiring little cleanup or need for extermination."
+ combatagate_upgrade_1:0 "Muscle Growth Factor"
+ combatagate_upgrade_1_desc:0 "By introducing genes from larges predatory felines, we can expand the cardiovascular system of the basic combat amalgamate and increase overall muscle growth. Improved lung capacity will allow for faster movement in combat."
+ combatagate_upgrade_2:0 "Hive Hierarchy Development"
+ combatagate_upgrade_2_desc:0 "The hierarchy of Bee Hives is an excellent template for improving the combat communication and coordination of combat amalgamates, granting them greater organizational skills."
+ combatagate_upgrade_A:0 "Neuron Complexity Theorem"
+ combatagate_upgrade_4:0 "Cephalopod Chromatophores"
+ combatagate_upgrade_5:0 "Carcinisation Principle"
+ combatagate_upgrade_6:0 "Full Spectrum Analysis"
+ combatagate_upgrade_7:0 "lyssavirus Implant Procedure"
+ combatagate_2:0 "Combatagate Assault Forms"
+ combatagate_2_desc:0 "Created either to spit in the face of god or prove he has abandoned us, Assault Combatagates are the unnatural evolution of Amalgate Genetics. Less of a real animal and more a violent soup of genes, new model Combatagates are extremely unstable and begin to decompose within minutes of oxygen exposure. The existential horror of their approaching death seems to improve combat performance."
+ combatagate_upgrade_8:0 "Crocodylidae Bite Force"
+ combatagate_upgrade_9:0 "Aquatic Oxygen Processing"
+ combatagate_upgrade_10:0 "Kevlar Dermal Implants"
+ combatagate_upgrade_11:0 "Streamlined Primordium Recycling"
+ combatagate_3:0 "Venator Class Amalgamate"
+ combatagate_3_desc:0 "Nicknamed Venators, latin for Hunter, these Amalgamates are the cutting edge of bio-genetic science. Every cell and molecule is meticulously designed to maximize killing potential and combat sustainability. Higher brain functions remain dulled, allowing handlers to direct swarms using chemical markers and electric shocks."
 
  artillery6:0 "Proximity Fuze"
  artillery6_desc:0 "The Proximity Fuze is a fuze that detonates an explosive devices automatically when the distance to the target becomes smaller then a predetermined value. It works for all kind of artillery or anti air shells and can be made used with rockets. Recent observations have shown that the lethality with this fuze increase by 5 to 10 times compared to the common contact fuze."
+
