--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1601,7 +1601,7 @@
   britain.4001.a:0 "Work smarter, not harder, damnit."
 
   britain.4002.t:0 "Britain proposes the Sterling Zone"
-  britain.4002.d:0 ""
+  britain.4002.d:0 "PLACEHOLDER"
   britain.4002.a:0 "An exceptional proposal!"
   britain.4002.b:0 "We're not interested"
 
