--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -582,7 +582,7 @@ PB_GER_China_Management:0 "Deutchsland in China"
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
   PB_GER_Hugenberg_Line:0 "The Hugenberg Line"
-  PB_GER_Emergency_Directives:0 "Emergency Directives"
+  PB_GER_Emergency_Directives:0 "German-British Army Training"
   PB_GER_War_Rationing_Plan:0 "The War Rationing Plan"
   PB_GER_Rhine_Line:0 "Die Wacht am Rhein"
   PB_GER_Woman_In_Military:0 "Woman in the Airforce"
