Tomorrow will be too late.
Brinta.

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -872,7 +872,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.36.c:0 "We are on the path of war."
 
   germany.37.t:0 "Shooting between Socialists and Reactionaries in Salzburg"
-  germany.37.d:0 ""
+  germany.37.d:0 "All seemed normal on a wednesday morning, on the Griesgasse in the city of Salzburg. Birds chirped, people came and went, all was well. Two gentlemen met on a bench near the water of the river. They sat down, talked somewhat. Then all of a sudden, one seems to be shocked. He reaches into his pocket, and shoots the man next to him in the head. Silence is bestowed upon the Griesgasse.\n\n A man screams from the nearby bridge, and shoots the murderer. Before you know it, a gang war ensues on the boulevard. Death overtakes the oh so quiet area. People dead, people confused and blood everywhere. Many people die, many are injured. The police intervene in the shooting, and join in as a 3rd party. The fight lasts long, with no clear winner coming out after a few hours.\n\n The fighting finally stopped when one side ran out of bullets and surrendered. The other side did the same thing. The Police arrested both. After checking their wallets, both sides were identified as fitting into ideologies, one side were Socialists and the other Reactionaries. The Police were furious with their respective organisations, and even threatened to arrest all members, even ones not involved in the shooting. This decision is not set in stone however, as the local government has to agree."
   germany.37.a:0 "Ban Guns."
   germany.37.b:0 "Put the organizations under surveillance."
   germany.37.c:0 "Just arrest the instigators."
@@ -884,7 +884,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.38.c:0 "Bielefeld exists?."
 
   germany.39.t:0 "Flooding in Emden"
-  germany.39.d:0 ""
+  germany.39.d:0 "Catastrophe in Northern Germany today, water is coming into the city of Emden. Although the storm which caused the flooding wasn’t there suddenly, there was no warning to say that this flooding would occur. As God does not warn his prey. Right now the city is debating what action to take, but they have considered a few options, build a dyke or canal like seen in other parts of Germany and Holland. Or too simply rebuild the lossed houses and land, and too simply hope God has mercy."
   germany.39.a:0 "Construct Defensive Flooding Walls."
   germany.39.b:0 "Just reconstruct the homes."
   germany.39.c:0 "Relocate their homes to different places."
