--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -871,7 +871,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.36.b:0 "But you will gain new jobs?"
   germany.36.c:0 "We are on the path of war."
 
-  germany.37.t:0 "Shooting between Socialists and Reactionaries in Salzburg"
+  germany.37.t:0 "    Shooting between Socialists and Reactionaries in Salzburg"
   germany.37.d:0 "All seemed normal on a wednesday morning, on the Griesgasse in the city of Salzburg. Birds chirped, people came and went, all was well. Two gentlemen met on a bench near the water of the river. They sat down, talked somewhat. Then all of a sudden, one seems to be shocked. He reaches into his pocket, and shoots the man next to him in the head. Silence is bestowed upon the Griesgasse.\n\n A man screams from the nearby bridge, and shoots the murderer. Before you know it, a gang war ensues on the boulevard. Death overtakes the oh so quiet area. People dead, people confused and blood everywhere. Many people die, many are injured. The police intervene in the shooting, and join in as a 3rd party. The fight lasts long, with no clear winner coming out after a few hours.\n\n The fighting finally stopped when one side ran out of bullets and surrendered. The other side did the same thing. The Police arrested both. After checking their wallets, both sides were identified as fitting into ideologies, one side were Socialists and the other Reactionaries. The Police were furious with their respective organisations, and even threatened to arrest all members, even ones not involved in the shooting. This decision is not set in stone however, as the local government has to agree."
   germany.37.a:0 "Ban Guns."
   germany.37.b:0 "Put the organizations under surveillance."
@@ -1568,6 +1568,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_FORMS_EUROPA:0 "The following nations will be annexed if they exist:\n\n-[DEN.GetFlag] Denmark\n-[SWE.GetFlag] Sweden\n-[NOR.GetFlag] Norway\n-[POL.GetFlag] Poland\n-[WLA.GetFlag] Wallonia\n-[HOL.GetFlag] Netherlands\n\nOverseas territories will be reformed into European mandates and the proclamation of Europa will happen"
 
   GER_DEPORT_THE_FRENCHIES:0 "Any cores the [FRA.GetFlag] French may have in the Lowlands or the Rhineland will be removed"
+
+  GER_Expand_Influence_Europe:0 "£decision_icon_small Decisions will be §Yunlocked§! to expand our influence over Europe"
+
+  GER_Expand_Influence_Balkans:0 "£decision_icon_small Decisions will be §Yunlocked§! to expand our influence over the Balkans"
 
   ##########################
   # COSMETIC TAGS
