Small Fixes and Balancing

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1018,7 +1018,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.53.d:0 ""
   germany.53.a:0 "For a Free and United Europe."
   
-  germany.54.t:0 "The Stresemann Resigns - The Government Falls"
+  germany.54.t:0 "Stresemann Resigns - The Government Falls"
   germany.54.d:0 "Gustav Stresemann has given the new Kaiserin his appeal to resign from his duties as chancellor. With political terrorism rising, the economic depression still ongoing and all the drama around the Kaiserin, Gustav has determined that he is not the right man for the job anymore. With Stresemann resignation it is clear that the other liberal minister would leave aswell and the coalition between SB and UDP would be no more.\n\nDespite this Elisabeth has decided to accept Stresemann's resignation. While more political turmoil and elections are not the things the nation need right now, the Kaiserin thinks Germany needs a new government to change the rusty gears it has been running on for so long now.\n\nFranz Blücher will temporarily take over the Chancellory and Liebknecht, Müller and Külz have agreed to maintain their ministries positions until the next government has been voted into power."
   germany.54.a:0 "It's all collapsing now."
 
