--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -676,6 +676,14 @@
   PBNews.172.d:0 "Reports are coming in that the region of Hannover, once under the possesion of Munich Germany, is now under the control of SP forces. The specifics aren't too well known on why this is the case however rumours have spread that France granted these lands to the security branch of the military to avoid a supposed civil war. Whatever the case may be one thing for sure is that Hannover now lays under the control of a brutish government that would even make the French and Russian governments blink twice. "
   PBNews.172.a:0 "The redrawing of Europe continues"
 
+  PBNews.173.t:0 "SPAIN JOINS THE PACTE"
+  PBNews.173.d:0 "Spain announced it intentions today to join the French led Pacte Revanchiste. The Great War still heavily weighs on the Spanish conscience, thousands of Spanish men spilt their blood in reclaiming their lost empire and it therefore comes as no surprise that the Spanish nation has once again tied itself to the protection of the French. Apparently either side are already concluding their active diplomatic talks and are simply waiting for an official declaration of partnership by the French and Spanish ambassadors. Both Germany and Britain have made no announcement on the matter."
+  PBNews.173.a:0 "Europe best be worried"
+
+  PBNews.174.t:0 "THE PACTE OF THORNS"
+  PBNews.174.d:0 "Both France and Russia today proclaimed their new found friendship under the common threat of the British and German empires. The Russian administration made it clear that they weren't joining the Pacte Revanchiste, stating the fact that if France was to find itself at war then Russia would jointly assist the nation military and vise versa. Russia, a historically British aligned nation, surpised many military analysists who were banking on Russia joining the Imperial Powers if France was to ever go down the warpath. Seeing them as a bulwark against French aggression."
+  PBNews.174.a:0 "Is this a prelude to something greater?"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
