--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -565,7 +565,7 @@
   PBNews.144.a:0 "Her contributions will not be forgotten"
 
   PBNews.145.t:0 "INTERNATIONAL TELESCREENING"
-  PBNews.145.d:0 "In a culmination of more than three years of development, the International Screen Research Commission in Bern conducted the first trans-national telescreen broadcast without the need for relay networks in history. Watchers across Europe tuned in to watch a previously recorded film of the 1928 Olympic Games in Calais. Watchers with a radiographic device could even tune into an associated frequency to enjoy simulcast sound.\n\While rudimentary, the broadcast demonstrates the theoretical possibility of an international telescreen broadcast without the need for bulky relay networks, although researchers stressed that the technology needs more time."
+  PBNews.145.d:0 "In a culmination of more than three years of development, the International Screen Research Commission in Bern conducted the first trans-national telescreen broadcast without the need for relay networks in history. Watchers across Europe tuned in to watch a previously recorded film of the 1928 Olympic Games in Calais. Watchers with a radiographic device could even tune into an associated frequency to enjoy simulcast sound.\n\nWhile rudimentary, the broadcast demonstrates the theoretical possibility of an international telescreen broadcast without the need for bulky relay networks, although researchers stressed that the technology needs more time."
   PBNews.145.a:0 "Watching the footie just got easier"
 
   PBNews.146.t:0 "SPINOSAUR DEBUT IN ALGIERS"
